Add new contact validation

--- a/src/main/resources/templates/user/add_contact.html
+++ b/src/main/resources/templates/user/add_contact.html
@@ -23,6 +23,7 @@
                 <div class="col-span-12 md:col-span-6  ">
                     <div
                         class="card block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                       <div th:replace="message :: messagebox"></div>
 
                         <h1 class="text-2xl font-semibold">Add contact</h1>
                         <p class="text-gray-500">This contact will be stored on cloud , You can directly email this
@@ -33,7 +34,7 @@
                             <div class="mb-3">
                                 <label for="input-group-1"
                                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">ContactName</label>
-                                <div class="relative mb-6">
+                                <div class="relative mb-1">
                                     <div
                                         class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                                         <img th:src="@{/images/user.png}" class="h-4 w-4">
@@ -43,12 +44,15 @@
                                         th:field="*{name}"
                                         placeholder="name">
                                 </div>
+                                <p th:if="${#fields.hasErrors('name')}" class="text-red-600"
+                                    th:errors="*{name}"
+                                >Empty Field</p>
                             </div>
                             <div class="mb-3">
                                 <label for="input-group-1"
                                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact
                                     Email</label>
-                                <div class="relative mb-6">
+                                <div class="relative mb-1">
                                     <div
                                         class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                                         <img th:src="@{/images/email.jpeg}" class="h-4 w-4">
@@ -58,12 +62,15 @@
                                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                         placeholder="example@gmail.com">
                                 </div>
+                                <p th:if="${#fields.hasErrors('email')}" class="text-red-600"
+                                    th:errors="*{email}"
+                                >Empty Field</p>
                             </div>
                             <div class="mb-3">
                                 <label for="input-group-1"
                                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact
                                     Phone Number</label>
-                                <div class="relative mb-6">
+                                <div class="relative mb-1">
                                     <div
                                         class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                                         <img th:src="@{/images/contact.png}" class="h-4 w-4">
@@ -73,6 +80,9 @@
                                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                         placeholder="0000000000">
                                 </div>
+                                <p th:if="${#fields.hasErrors('phoneNumber')}" class="text-red-600"
+                                    th:errors="*{phoneNumber}"
+                                >Empty Field</p>
                             </div>
 
                             <div class="mb-3">
@@ -86,6 +96,9 @@
                                         class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                         placeholder="Add contact address...."></textarea>
                                 </div>
+                                <p th:if="${#fields.hasErrors('address')}" class="text-red-600"
+                                    th:errors="*{address}"
+                                >Empty Field</p>
                             </div>
                             <div class="mb-3">
 
