--- a/src/main/resources/templates/user/add_contact.html
+++ b/src/main/resources/templates/user/add_contact.html
@@ -158,10 +158,10 @@
                             </div>
 
                             <div class="flex items-center mb-3">
-                                <input  type="checkbox" value=""
+                                <input  type="checkbox" id="favorite-checkbox"
                                     th:field="*{favorite}"
                                     class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                                <label for="default-checkbox"
+                                <label for="favorite-checkbox"
                                     class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Favorite</label>
                             </div>
 
