--- a/src/main/resources/templates/user/sidebar.html
+++ b/src/main/resources/templates/user/sidebar.html
@@ -45,7 +45,7 @@
             </a>
          </li>
          <li>
-            <a href="#"
+            <a th:href="@{'/user/contacts'}"
                class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                <img th:src="@{/images/contacts.jpeg}" class="h-5 w-5" alt="">
                <span class="flex-1 ms-3 whitespace-nowrap">Contacts</span>
