--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -21,47 +21,26 @@
 
 
                 <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-                    <div
-                        class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900">
+                    <form th:object="${contactSearchForm}"
+                    th:action="@{'/user/contacts/search'}">
+                        <div
+                        class=" space-x-3 flex items-center justify-start flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900">
+
+                        <!-- select box -->
                         <div>
-                            <button id="dropdownActionButton" data-dropdown-toggle="dropdownAction"
-                                class="inline-flex items-center text-gray-500 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-3 py-1.5 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
-                                type="button">
-                                <span class="sr-only">Action button</span>
-                                Action
-                                <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                                    fill="none" viewBox="0 0 10 6">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="2" d="m1 1 4 4 4-4" />
-                                </svg>
-                            </button>
-                            <!-- Dropdown menu -->
-                            <div id="dropdownAction"
-                                class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44 dark:bg-gray-700 dark:divide-gray-600">
-                                <ul class="py-1 text-sm text-gray-700 dark:text-gray-200"
-                                    aria-labelledby="dropdownActionButton">
-                                    <li>
-                                        <a href="#"
-                                            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Reward</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"
-                                            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Promote</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"
-                                            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Activate
-                                            account</a>
-                                    </li>
-                                </ul>
-                                <div class="py-1">
-                                    <a href="#"
-                                        class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete
-                                        User</a>
-                                </div>
-                            </div>
+
+                            <select id="countries_disabled"
+                                
+                                th:field="*{field}"
+                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                                <option selected value="">Select Field</option>
+                                <option value="name">Name</option>
+                                <option value="phoneNumber">Phone</option>
+                                <option value="email">Email</option>
+                    
+                            </select>
                         </div>
-                        <label for="table-search" class="sr-only">Search</label>
+                       
                         <div class="relative">
                             <div
                                 class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
@@ -72,11 +51,16 @@
                                 </svg>
                             </div>
                             <input type="text" id="table-search-users"
+                                th:field="*{value}"
                                 class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                 placeholder="Search for users">
                         </div>
+                        <button type="submit" class="px-3 py-2 rounded-lg bg-gray-700 text-white">Search</button>
                     </div>
-                    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                    </form>
+                    <table 
+                    th:if="${pageContact.totalElements>0}"
+                    class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                             <tr>
 
@@ -152,33 +136,39 @@
                             </tr>
                         </tbody>
                     </table>
-                    <div class="pagination_container p-5 text-center bg-white dark:bg-gray-800">
+                    <div 
+                    th:if="${pageContact.totalElements>0}"
+                    class="pagination_container p-5 text-center bg-white dark:bg-gray-800">
                         <nav aria-label="Page navigation example">
                             <ul class="inline-flex -space-x-px text-base h-10">
                                 <li th:unless="${pageContact.first}">
                                     <a href="#"
-                                    th:href="@{'/user/contacts?size='+${pageSize}+'&page='+${pageContact.number-1}}"
+                                        th:href="@{'/user/contacts?size='+${pageSize}+'&page='+${pageContact.number-1}}"
                                         class="flex items-center justify-center px-4 h-10 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Previous</a>
                                 </li>
-                                <li  th:each="index : ${#numbers.sequence(0,pageContact.totalPages-1)}">
-                                    <a href="#"
-                                    th:href="@{'/user/contacts?size='+${pageSize}+'&page='+${index}}"
-                                    th:classappend="${index==pageContact.number ? 'bg-blue-100 dark:bg-gray-700' : 'bg-white'}"
-                                   
+                                <li th:each="index :  ${#numbers.sequence(0,pageContact.totalPages-1)}">
+                                    <a  th:href="@{'/user/contacts?size='+${pageSize}+'&page='+${index}}"
+                                        th:classappend="${index==pageContact.number ? 'bg-blue-100 dark:bg-gray-700' : 'bg-white'}"
                                         class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 border border-gray-300 hover:bg-gray-100   dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                                         <span th:text="${index+1}"></span>
                                     </a>
                                 </li>
-                                
-                               
+
+
                                 <li th:unless="${pageContact.last}">
                                     <a href="#"
-                                    th:href="@{'/user/contacts?size='+${pageSize}+'&page='+${pageContact.number+1}}"
+                                        th:href="@{'/user/contacts?size='+${pageSize}+'&page='+${pageContact.number+1}}"
                                         class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Next</a>
                                 </li>
                             </ul>
                         </nav>
                     </div>
+                    <h1
+                    class="text-5xl text-center dark:bg-gray-800 dark:text-white bg-white p-4"
+                    th:if="${pageContact.totalElements<=0}"
+                  >
+                    No result found
+                  </h1>
                 </div>
 
             </div>
