--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -46,6 +46,7 @@ th:fragment="parent(content,script)" xmlns:th="http://www.thymeleaf.org">
     <!-- <footer>this is footer </footer> -->
 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script th:src="@{'/js/script.js'}"></script>
     <th:block th:replace="${script}"></th:block>
 </body>
