--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -21,46 +21,42 @@
 
 
                 <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-                    <form th:object="${contactSearchForm}"
-                    th:action="@{'/user/contacts/search'}">
+                    <form th:object="${contactSearchForm}" th:action="@{'/user/contacts/search'}">
                         <div
-                        class=" space-x-3 flex items-center justify-start flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900">
+                            class=" space-x-3 flex items-center justify-start flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900">
 
-                        <!-- select box -->
-                        <div>
+                            <!-- select box -->
+                            <div>
 
-                            <select id="countries_disabled"
-                                
-                                th:field="*{field}"
-                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                                <option selected value="">Select Field</option>
-                                <option value="name">Name</option>
-                                <option value="phoneNumber">Phone</option>
-                                <option value="email">Email</option>
-                    
-                            </select>
-                        </div>
-                       
-                        <div class="relative">
-                            <div
-                                class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
-                                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
-                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
-                                </svg>
+                                <select id="countries_disabled" th:field="*{field}"
+                                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                                    <option selected value="">Select Field</option>
+                                    <option value="name">Name</option>
+                                    <option value="phoneNumber">Phone</option>
+                                    <option value="email">Email</option>
+
+                                </select>
                             </div>
-                            <input type="text" id="table-search-users"
-                                th:field="*{value}"
-                                class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                placeholder="Search for users">
+
+                            <div class="relative">
+                                <div
+                                    class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
+                                    <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
+                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                            stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                                    </svg>
+                                </div>
+                                <input type="text" id="table-search-users" th:field="*{value}"
+                                    class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                    placeholder="Search for users">
+                            </div>
+                            <button type="submit" class="px-3 py-2 rounded-lg bg-gray-700 text-white">Search</button>
                         </div>
-                        <button type="submit" class="px-3 py-2 rounded-lg bg-gray-700 text-white">Search</button>
-                    </div>
                     </form>
-                    <table 
-                    th:if="${pageContact.totalElements>0}"
-                    class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                    <div data-th-replace="~{message :: messagebox}"></div>
+                    <table th:if="${pageContact.totalElements>0}"
+                        class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                             <tr>
 
@@ -104,7 +100,7 @@
                                         <!-- <div
                                         th:if="*{favorite}"
                                          class="h-2.5 w-2.5 rounded-full bg-green-500 me-2"></div> -->
-                                        <span th:if="*{favorite}" class="favorite-icon">⭐</span>
+
                                         <a th:href="@{*{linkedInLink}}"><img th:src="@{/images/linkedin.jpeg}"
                                                 class="w-6 h-6" alt="">
 
@@ -113,32 +109,33 @@
                                                 class="w-4 h-4" alt="">
 
                                         </a>
+                                        <span th:if="*{favorite}" class="favorite-icon">⭐</span>
                                     </div>
                                 </td>
                                 <td class="px-6 py-4">
                                     <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">
                                         <div class="flex gap-1">
-                                            <a href="">
+                                            <button th:onClick="deleteContact([[${c.id}]])">
+
                                                 <img class="h-5 w-5"
                                                     src="https://th.bing.com/th?id=OIP.m98rRDOJFdK9GRT85luivQHaIF&w=239&h=261&c=8&rs=1&qlt=90&o=6&dpr=1.5&pid=3.1&rm=2"
-                                                    alt=""></a>
-                                            <a href="">
+                                                    alt=""></button>
+                                            <a th:href="@{'/user/contacts/view/'+*{id}}">
                                                 <img class="w-5 h-5"
                                                     src="https://th.bing.com/th?id=OIP.YTK5CDuJmgkdVblJqT4exQHaHa&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.5&pid=3.1&rm=2"
                                                     alt=""></a>
-                                            <a href="">
+                                            <button th:onclick="loadContactData([[${c.id}]])">
                                                 <img class="w-5 h-5"
                                                     src="https://th.bing.com/th?id=OIP.PjodJ2qJqef4vCZzfzqHZwHaHa&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.5&pid=3.1&rm=2"
-                                                    alt=""></a>
+                                                    alt=""></button>
                                         </div>
                                     </a>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
-                    <div 
-                    th:if="${pageContact.totalElements>0}"
-                    class="pagination_container p-5 text-center bg-white dark:bg-gray-800">
+                    <div th:if="${pageContact.totalElements>0}"
+                        class="pagination_container p-5 text-center bg-white dark:bg-gray-800">
                         <nav aria-label="Page navigation example">
                             <ul class="inline-flex -space-x-px text-base h-10">
                                 <li th:unless="${pageContact.first}">
@@ -147,7 +144,7 @@
                                         class="flex items-center justify-center px-4 h-10 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Previous</a>
                                 </li>
                                 <li th:each="index :  ${#numbers.sequence(0,pageContact.totalPages-1)}">
-                                    <a  th:href="@{'/user/contacts?size='+${pageSize}+'&page='+${index}}"
+                                    <a th:href="@{'/user/contacts?size='+${pageSize}+'&page='+${index}}"
                                         th:classappend="${index==pageContact.number ? 'bg-blue-100 dark:bg-gray-700' : 'bg-white'}"
                                         class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 border border-gray-300 hover:bg-gray-100   dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                                         <span th:text="${index+1}"></span>
@@ -163,18 +160,19 @@
                             </ul>
                         </nav>
                     </div>
-                    <h1
-                    class="text-5xl text-center dark:bg-gray-800 dark:text-white bg-white p-4"
-                    th:if="${pageContact.totalElements<=0}"
-                  >
-                    No result found
-                  </h1>
+                    <h1 class="text-5xl text-center dark:bg-gray-800 dark:text-white bg-white p-4"
+                        th:if="${pageContact.totalElements<=0}">
+                        No result found
+                    </h1>
                 </div>
 
             </div>
+            <div th:replace="~{user/contact_modals :: contact}"></div>
         </div>
+
     </div>
 
+    <script th:src="@{'/js/contacts.js'}"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
