add some Athentication code

--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -115,7 +115,7 @@
                                 <td class="px-6 py-4">
                                     <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">
                                         <div class="flex gap-1">
-                                            <button th:onClick="deleteContact([[${c.id}]])">
+                                            <button th:onclick="deleteContact([[${c.id}]])">
 
                                                 <img class="h-5 w-5"
                                                     src="https://th.bing.com/th?id=OIP.m98rRDOJFdK9GRT85luivQHaIF&w=239&h=261&c=8&rs=1&qlt=90&o=6&dpr=1.5&pid=3.1&rm=2"
