--- a/src/main/resources/templates/user/sidebar.html
+++ b/src/main/resources/templates/user/sidebar.html
@@ -2,8 +2,10 @@
    class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
    aria-label="Sidebar">
    <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800">
-      <a href="https://flowbite.com/" class="flex items-center ps-2.5 mb-5">
-         <img src="https://flowbite.com/docs/images/logo.svg" class="h-6 me-3 sm:h-7" alt="Flowbite Logo" />
+      <a href="https://flowbite.com/" class="flex flex-col items-center ps-2.5 mb-5">
+         <img th:src="@{${loggedUser.profilePic}}"
+          class="h-16 me-3 sm:h-20 rounded-full shadow-md" alt="Flowbite Logo" />
+          <span th:text="${loggedUser.name}">Mushfique</span>
          <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Welcome to SCM</span>
       </a>
       <ul class="space-y-2 font-medium">
